2003-04-17  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* eq.c (scm_eqv_p, scm_equal_p): Turned into a primitive generics.

	* snarf.h (SCM_PRIMITIVE_GENERIC, SCM_PRIMITIVE_GENERIC_1): New
	macros.

2003-04-16  Rob Browning  <rlb@defaultvalue.org>

	* gc_os_dep.c: Added patch for UnixWare and OpenUNIX support.
	Thanks to Boyd Gerber.
	Added check for __arm__ in addition to arm for LINUX and copied
	__s390__ defines from upstream libgc. Thanks to James Treacy for
	reporting the problems.

2003-04-15  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.c (scm_sys_fast_slot_ref): Use SCM_SLOT instead of
	scm_at_assert_bound_ref.  (We don't want the unbound check.  See
	oop/goops/active-slot.scm.)

2003-04-14  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* print.c (scm_prin1): Remember old state of pstate->writingp.

2003-04-13  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.c (scm_sys_prep_layout_x): Instance allocation is now
	indicated through extra fields in getters-n-setters.
	(scm_add_slot): Adapted to new format of getters_n_setters slot.
	(Thanks to Andy Wingo.)

2003-04-12  Rob Browning  <rlb@defaultvalue.org>

	* backtrace.c (display_backtrace_file): correct a couple of
	instances of "file == SCM_BOOL_F" to "SCM_FALSEP (file)"
	(shouldn't be comparing values directly).

	* __scm.h (SCM_FLUSH_REGISTER_WINDOWS): don't just rely on "sparc"
	test.  Instead use
	#if defined (sparc) || defined (__sparc__) || defined (__sparc)
	as gc_os_dep.c suggests is appropriate.

2003-04-11  Rob Browning  <rlb@defaultvalue.org>

	* goops.c (prep_hashsets): make static to match prototype.
	(scm_sym_args): SCM_SYMBOL -> SCM_GLOBAL_SYMBOL.  Thanks to Albert
	Chin.

	* c-tokenize.lex: remove trailing comma from enum.  Thanks to
	Albert Chin.

	* gc_os_dep.c: add NetBSD powerpc config info.  Thanks to Thomas
	Klausner.

	* eval.c (SCM_CEVAL): fixed a couple of mysterious (probably
	optimization related) bugs on powerpc by altering some