@@ -1,5 +1,8 @@
 2003-04-17  Mikael Djurfeldt  <djurfeldt@nada.kth.se>
 
+	* goops.c (TEST_CHANGE_CLASS): Update variable class after class
+	change.
+	
 	* eq.c (scm_eqv_p, scm_equal_p): Turned into a primitive generics.
 
 	* snarf.h (SCM_PRIMITIVE_GENERIC, SCM_PRIMITIVE_GENERIC_1): New
